Admin paneli yapildi, marka ekleme, düzenleme islemleri yapildi

--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Delete.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model OtoServisSatis.Entities.Rol
+﻿@model OtoServisSatis.Entities.Marka
 
 @{
-    ViewData["Title"] = "Rol Sil";
+    ViewData["Title"] = "Sil";
 }
 
-<h1>Rol Sil</h1>
+<h1>Sil</h1>
 
-<h3>Rolü silmek istiyor musunuz?</h3>
+<h3>Silmek istiyor musunuz?</h3>
 <div>
-
+    <h4>Marka</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
