--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Edit.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model OtoServisSatis.Entities.Rol
+﻿@model OtoServisSatis.Entities.Marka
 
 @{
-    ViewData["Title"] = "Rol Düzenle";
+    ViewData["Title"] = "Marka Düzenle";
 }
 
-<h1>Rol Düzenle</h1>
+<h1>Marka Düzenle</h1>
 
 
 <hr />
@@ -24,3 +24,4 @@
         </form>
     </div>
 </div>
+
