--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Brands/Index.cshtml
@@ -1,15 +1,15 @@
-﻿@model IEnumerable<OtoServisSatis.Entities.Rol>
+﻿@model IEnumerable<OtoServisSatis.Entities.Marka>
 
 @{
-    ViewData["Title"] = "Roller";
+    ViewData["Title"] = "Markalar";
 }
 
-<h1>Roller</h1>
+<h1>Markalar</h1>
 
 <p>
     <a class="btn btn-outline-primary" asp-action="Create">Yeni Ekle</a>
 </p>
-<table class="table table-striped table-hover">
+<table class="table">
     <thead>
         <tr>
             <th>
