--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Roles/Create.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Roles/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model OtoServisSatis.Entities.Rol
 
 @{
-    ViewData["Title"] = "Yeni Rol Ekle";
+    ViewData["Title"] = "Rol Ekle";
 }
 
-<h1>Ekle</h1>
+<h1>Rol Ekle</h1>
 
 <h4>Rol</h4>
 <hr />
@@ -23,8 +23,3 @@
         </form>
     </div>
 </div>
-
-<div>
-  
-</div>
-
