--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -67,6 +67,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             Markalar
                         </a>
+                        <a class="nav-link" href="/Admin/Cars">
+                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                            Araçlar
+                        </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
