--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Edit.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Edit.cshtml
@@ -53,11 +53,10 @@
                 <input asp-for="Notlar" class="form-control" />
                 <span asp-validation-for="Notlar" class="text-danger"></span>
             </div>
-            <div class="form-group mt-3">
+            <div class="form-group">
                 <input type="submit" value="Kaydet" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
 
