--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
@@ -30,8 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.SatistaMi)
             </th>
+            
             <th>
-                @Html.DisplayNameFor(model => model.Notlar)
+                @Html.DisplayNameFor(model => model.Resim1)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Marka)
@@ -62,7 +63,7 @@
                     @Html.DisplayFor(modelItem => item.SatistaMi)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Notlar)
+                    <img src="/Img/Cars/@item.Resim1" alt="" height="34" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Marka.Adi)
