Anasayfa İçin ViewModel Entegrasyonu ve Araç Gösterim İyileştirmeleri

--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Cars/Index.cshtml
@@ -29,8 +29,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.SatistaMi)
+            </th><th>
+                @Html.DisplayNameFor(model => model.Anasayfa)
             </th>
-            
             <th>
                 @Html.DisplayNameFor(model => model.Resim1)
             </th>
@@ -61,6 +62,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.SatistaMi)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Anasayfa)
                 </td>
                 <td>
                     <img src="/Img/Cars/@item.Resim1" alt="" height="34" />
