Üye Kayıt ve Giriş İşlemleri İçin Arayüz ve Backend Entegrasyonu

--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Edit.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Edit.cshtml
@@ -1,11 +1,10 @@
-﻿@model OtoServisSatis.Entities.Slider
+﻿@model Slider
 
 @{
-    ViewData["Title"] = "Slider Düzenle";
+    ViewData["Title"] = "Slide Düzenle";
 }
 
-<h1>Slider Düzenle</h1>
-
+<h1>Slide Düzenle</h1>
 
 <hr />
 <div class="row">
@@ -45,4 +44,3 @@
 <div>
     <a asp-action="Index">Listeye Dön</a>
 </div>
-
