--- a/OtoServisSatis.WebUI/Views/Arac/List.cshtml
+++ b/OtoServisSatis.WebUI/Views/Arac/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Arac>
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Tüm Araçlarımız";
 }
 
 <h1>Tüm Araçlarımız</h1>
@@ -30,5 +30,5 @@
             </div>
         }
     </div>
-</div>
 
+</div>
