--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Login/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Login/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-5">
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Admin Login</h3></div>
+                                <div class="card-header"><h3 class="text-center font-weight-light my-4">Admin Giriş</h3></div>
                                 <div class="card-body">
                                     <form asp-action="Index">
                                         <div class="form-floating mb-3">
