--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -28,7 +28,7 @@
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#!">Ayarlar</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="/Admin/Login/Logout">Oturumu Kapat</a></li>
+                    <li><a class="dropdown-item" href="/admin/Login/Logout">Oturumu Kapat</a></li>
                 </ul>
             </li>
         </ul>
@@ -44,10 +44,12 @@
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-house"></i></div>
                             Ana Ekran
                         </a>
+
                         <a class="nav-link" href="/Admin/Sliders">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-sliders"></i></div>
                             Slider Yönetimi
                         </a>
+
                         
                         <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
@@ -94,7 +96,7 @@
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
-                    <div class="small">Hoşgeldin güzellik :)</div>
+                    <div class="small">Hoşgeldin :)</div>
                     Admin
                 </div>
             </nav>
@@ -108,7 +110,7 @@
         </div>
     </div>
 
-    
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
