--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Create.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Create.cshtml
@@ -1,8 +1,7 @@
-﻿@model OtoServisSatis.Entities.Slider
+﻿@model Slider
 
 @{
     ViewData["Title"] = "Slide Ekle";
-    
 }
 
 <h1>Slide Ekle</h1>
@@ -25,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Resim" class="control-label"></label>
-                <input asp-for="Resim" class="form-control" type="file"/>
+                <input asp-for="Resim" class="form-control" type="file" />
                 <span asp-validation-for="Resim" class="text-danger"></span>
             </div>
             <div class="form-group">
