--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Delete.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model OtoServisSatis.Entities.Slider
 
 @{
-    ViewData["Title"] = "Sil";
+    ViewData["Title"] = "Slide Sil";
 }
 
-<h1>Sil</h1>
+<h1>Slide Sil</h1>
 
-<h3>Silmek istediğine emin misin?</h3>
+<h3>Silmek istiyor musunuz?</h3>
 <div>
     <h4>Slider Resmi</h4>
     <hr />
