--- a/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Index.cshtml
+++ b/OtoServisSatis.WebUI/Areas/Admin/Views/Sliders/Index.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Slider Yönetimi";
 }
 
-<h1>Slider Yönetimi</h1>
-
-
+<h1>Araçlar</h1>
 <p>
     <a class="btn btn-outline-primary" asp-action="Create">Yeni Ekle</a>
 </p>
@@ -29,25 +27,26 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Baslik)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Aciklama)
-            </td>
-            <td>
-                  <img src="/Img/Slider/@item.Resim" alt="" height="34" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Link)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Baslik)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Aciklama)
+                </td>
+                <td>
+                    <img src="/Img/Slider/@item.Resim" alt="" height="34" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Link)
+                </td>
+                <td>
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Düzenle</a> |
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Sil</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
