--- a/OtoServisSatis.WebUI/Views/Arac/Musteri.cshtml
+++ b/OtoServisSatis.WebUI/Views/Arac/Musteri.cshtml
@@ -4,7 +4,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Bilgilerinizi Giriniz</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -13,9 +13,7 @@
                         <form asp-action="MusteriKayit">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
-                                
                                 <input asp-for="AracId" type="hidden" value="@Context.GetRouteValue("id")" />
-                                
                             </div>
                             <div class="form-group">
                                 <label asp-for="Adi" class="control-label"></label>
@@ -62,3 +60,4 @@
         </div>
     </div>
 </div>
+
