--- a/OtoServisSatis.WebUI/Views/Account/Index.cshtml
+++ b/OtoServisSatis.WebUI/Views/Account/Index.cshtml
@@ -1,17 +1,31 @@
-﻿@model OtoServisSatis.Entities.Kullanici
+﻿@model Kullanici
 @{
-    ViewData["Title"] = "Kullanıcı Bilgilerim";
+    ViewData["Title"] = "Kullanici Bilgilerim";
 }
 
-<h1>Kullanıcı Bilgilerim</h1>
+@*<h1>@Model.Adi @Model.Soyadi</h1>
 
+@Context.User.HasClaim(x=>x.Value == "Admin")
+
+<br />
+
+@Context.User.FindFirst(System.Security.Claims.ClaimTypes.UserData)?.Value
+
+<br />
+
+@Context.User.FindFirst(System.Security.Claims.ClaimTypes.Email)?.Value*@
+
+<h1>Kullanıcı Bilgilerim</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="UserUpdate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="EklenmeTarihi" />
+            <input type="hidden" asp-for="UserGuid" />
+            <input type="hidden" asp-for="RolId" />
             <div class="form-group">
                 <label asp-for="Adi" class="control-label"></label>
                 <input asp-for="Adi" class="form-control" />
@@ -32,35 +46,19 @@
                 <input asp-for="Telefon" class="form-control" />
                 <span asp-validation-for="Telefon" class="text-danger"></span>
             </div>
-            
             <div class="form-group">
                 <label asp-for="Sifre" class="control-label"></label>
                 <input asp-for="Sifre" class="form-control" />
                 <span asp-validation-for="Sifre" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            <div class="form-group form-check mt-3">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="AktifMi" /> @Html.DisplayNameFor(model => model.AktifMi)
                 </label>
             </div>
-            
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Kaydet" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
-
-
-
-@*<h1>@Model.Adi @Model.Soyadi</h1>
-
-@Context.User.HasClaim(x=>x.Value == "Admin")
-
-<br />
-
-@Context.User.FindFirst(System.Security.Claims.ClaimTypes.UserData)?.Value
-
-<br />
-
-@Context.User.FindFirst(System.Security.Claims.ClaimTypes.UserData)?.Value*@
