--- a/OtoServisSatis.WebUI/Views/Home/Index.cshtml
+++ b/OtoServisSatis.WebUI/Views/Home/Index.cshtml
@@ -4,10 +4,7 @@
 }
 
 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-
     <div class="carousel-inner">
-
-
         @foreach (var item in Model.Sliders)
         {
             <div class="carousel-item @(item == Model.Sliders.FirstOrDefault() ? "active" : "")">
@@ -21,18 +18,20 @@
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+        <span class="visually-hidden">Önceki</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+        <span class="visually-hidden">Sonraki</span>
     </button>
 </div>
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Oto Servis Satış</h1>
+    <p>Oto Servis Satış Uygulaması</p>
 </div>
+
+
 
 <div class="container px-4 px-lg-5 mt-5">
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -48,7 +47,7 @@
                             <!-- Product name-->
                             <h5 class="fw-bolder">@item.Marka.Adi @item.Modeli @item.KasaTipi</h5>
                             <!-- Product price-->
-                            @item.Fiyati ₺
+                        @item.Fiyati ₺
                         </div>
                     </div>
                     <!-- Product actions-->
@@ -59,5 +58,4 @@
             </div>
         }
     </div>
-
-</div>
+</div>   
