--- a/OtoServisSatis.WebUI/Views/Shared/_Layout.cshtml
+++ b/OtoServisSatis.WebUI/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
+                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Anasayfa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Privacy">Gizlilik</a>
@@ -37,19 +37,19 @@
                     @if (Context.User.Identity.IsAuthenticated)
                     {
                         <a asp-controller="Account" asp-action="Index" class="btn btn-primary">Hesabım</a>
-                        <a asp-controller="Account" asp-action="Logout" class="btn btn-primary">Oturumu Kapat</a>
+                        <a asp-controller="Account" asp-action="Logout" class="btn btn-danger">Oturumu Kapat</a>
                     }
                     else
                     {
-                        <a asp-controller="Account" asp-action="Login" class="btn btn-primary">Giriş</a>
-                        <a asp-controller="Account" asp-action="Register" class="btn btn-primary">Kaydol</a>
+                        <a asp-controller="Account" asp-action="Login" class="btn btn-success">Giriş Yap</a>
+                        <a asp-controller="Account" asp-action="Register" class="btn btn-primary">Kayıt Ol</a>
                     }
-                    
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
+        @Html.Raw(TempData["Message"])
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
